test/spec_vectors/load64/fail/module_31.wat
(module (memory i64 1) (func (result i32) (i32.load16_s (f32.const 0))))